Ignore LinkedIn links

--- a/www.divd.nl/reports/2020-00001-Citrix.md
+++ b/www.divd.nl/reports/2020-00001-Citrix.md
@@ -26,7 +26,7 @@ Various media caught up on the activities carried out by DIVD. Both Frank and Ma
  
 On 19 January Citrix started [releasing](https://www.citrix.com/blogs/2020/01/19/vulnerability-update-first-permanent-fixes-available-timeline-accelerated/) the first patches for version 11.1 and 12.0 of ADC and Gateway and on 24 January those for versions 12.1, 10.5 and 13.0 and their SD-WAN WANOP. Still, that did not immediately solve the problem, as the systems could already be compromised before the patch and remain vulnerable. Our Security Meldpunt, therefore, published some advice on our [blog](https://www.securitymeldpunt.nl/2020/01/15/How-to-check-your-Citrix-gateway/) to either do forensic analysis or to just reinstall the system from scratch using a clean image.
 
-<img src="images/reports/00001_CitrixADC_graph.png">
+<img src="images/reports/00001_CitrixADC_graph.png" alt="Grafiek van gevonden kwetsbare Citrix systemen">
  
 In continuing our scans, we could see the numbers of vulnerable systems steadily decline. (see table) It is difficult to estimate whether this decline is due to our reporting, or that of others. By 5 February we identified that mitigations were still missing on 70 of the systems we initially identified as vulnerable. Assuming these systems would be certainly compromised, we sent them a warning, again. By the beginning of March, only five were left. Some of the new volunteers joining DIVD took the task of calling these organizations. Four were happy we informed them and took immediate action, while just one call ended with an unwilling receptionist…
  
