This should fix html_proofer for now

--- a/csirt.divd.nl/cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00004.md
@@ -7,7 +7,7 @@ author: Sander Spierenburg
 excerpt: Een lijst met ruim 500k+ botnet slachtoffers is gepubliceerd / A list of Mirai botnet victims has been published exposing a total of 500K+ systems 
 redirect_from:
   - /DIVD-2020-00004/
-status : Open
+status : Closed
 ---
 
 | Our reference | [{{ page.divd }}]({{ page.divd }}) |
