--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -52,6 +52,7 @@ Wij gaan de lijst met Nederlandse systemen nader onderzoeken en de eigenaren van
 |:-----:|-------------|
 | 22-2-2020 | Security Meldpunt heeft een lijst ontvangen met 773 Nederlandse IP adressen. |
 | 23-2-2020 | E-mail verstuurd aan 72 netwerkbeheerders |
+| 3-12-2020 | Case Closed. |
 
 ![Ghostcat](/assets/images/ghostcat-logo-small.png "Image copyright Chaitin Tech")
 
@@ -89,5 +90,7 @@ We will further investigate the list of the Dutch systems and where necessary, i
 |:-----:|-------------|
 | 22-2-2020 | Security Hotline has received a list with 773 Dutch IP addresses. |
 | 23-2-2020 | Email sent to 72 netwerk operators |
+| 3-12-2020 | Case Closed. |
+
 
 ![Ghostcat](/assets/images/ghostcat-logo-small.png "Image copyright Chaitin Tech")
