--- a/csirt.divd.nl/cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00012.md
@@ -40,6 +40,8 @@ Onderzoekers van het DIVD verwerken de gelekte lijst en verifiëren of de op de 
 | 22-11-2020 | Bleeping Computer publiceert artikel |
 | 23-11-2020 | Fortinet geeft een statement aan Bleeping Computer |
 | 25-11-2020 | DIVD begonnen met verwerken van de lijst |
+| 3-12-2020 | Eerste notificaties verstuurd |
+
 
 ## Meer informatie
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
@@ -67,6 +69,7 @@ DIVD researchers are processing the list of vulnerable systems to verify if they
 | 22-11-2020 | Bleeping Computer publishes article |
 | 23-11-2020 | Fortinet issues a statement to Bleeping Computer |
 | 25-11-2020 | DIVD started processing the list |
+| 3-12-2020 | First notifications sent |
 
 ## More information
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
