--- a/csirt.divd.nl/cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00006.md
@@ -8,7 +8,7 @@ lead: Sander Spierenburg
 excerpt: Security Meldpunt vraagt uw aandacht voor een SMBv3 kwetsbaarheid en gaat netwerkbeheerders met publiek beschikbare SMBv3 servers met compressie waarschuwen / The Security hotline is asking your attention for a vulnerabilty in SMBv3 and is going to warn network operators of Dutch IPs that respond to SMBv3 handshakes and have encryption enabled
 redirect_from:
   - /DIVD-2020-00006/
-status : Open
+status : Closed
 ---
 
 | Our reference | [{{ page.divd }}]({{ page.divd }}) |
@@ -69,6 +69,7 @@ Deze kwetsbaarheid is in potentie een ernstig probleem voor client systemen (voo
 | 11-3-2020 | DIVD heeft in samenwerking met Mark Schloesser een internetwijde scan uitgevoerd en daarbij verscheidene SMBv3 systemen gevonden die compressie ondersteunen |
 | 12-3-2020 | DIVD gaat netwerkbeheerders van Nederlandse IP adressen met dergelijke servers waarschuwen. De overige adressen worden via onze internationale partners afgehandeld. |
 | 12-3-2020 | Microsoft heeft een out-of-band patch gepubliceerd. | 
+| 3-12-2020 | Case Closed. |
 
 <hr>
 
@@ -119,3 +120,4 @@ This vulnerability is potentially a serious threat to client systems (Mainly Win
 | 11-3-2020 | In cooperation with Mark Schloesser, DIVD has conducted an internet-wide scan for SMBv3 servers that support compression |
 | 12-3-2020 | The Security Hotline will warn network operators of Dutch IP addresses that have such systems. Other Ip addresses will be dealt with through our international partners |
 | 12-3-2020 | Microsoft has published an out-of-band patch for the vulnerability | 
+| 3-12-2020 | Case Closed. |
