--- a/csirt.divd.nl/cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00009.md
@@ -8,7 +8,7 @@ lead: Frank Breedijk
 excerpt: Een datadump met informatie over meer dan 900 gecompromitteerde Pulse Secure VPN enterprise servers is publiek gemaakt. / A data dump with information of over 900 compromised Pulse Secure VPN enterprise servers has been released.
 redirect_from:
   - /DIVD-2020-00009/
-status : Open
+status : Closed
 ---
 
 | Our reference | [{{ page.divd }}]({{ page.divd }}) |
@@ -41,6 +41,8 @@ Onderzoekers van het DIVD beschikken over de dataset van kwetsbare systemen en s
 |:-----:|-------------|
 | 04-08-2020| ZDnet publiceert artikel over dit lek |
 | 05-08-2020 | Case geopened en meldingen verstuurd|
+| 3-12-2020 | Case Closed. |
+
 
 ## Meer informatie
 * [https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/](https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/)
@@ -72,6 +74,8 @@ Researchers at the DIVD have the dataset of vulnerable systems and notify admini
 |:-----:|-------------|
 | 04-08-2020| ZDnet publishes article about this breach |
 | 05-08-2020 | Case opened and notifications sent|
+| 3-12-2020 | Case Closed. |
+
 
 ## More information
 * [https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/](https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/)
