--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -3,12 +3,12 @@ layout: case
 title: DIVD-2020-00010 - wpDiscuz plugin Remote Code Excution
 divd: DIVD-2020-00010
 short: WordPress Plugin wpDiscuz has a vulnerability that alllows attackers to take over a complete system
-author: Frank Breeidjk
+author: Frank Breedijk
 lead: Frank Breedijk
 excerpt: In de WordPress Plugin wpDiscuz zit een kritieke kwetsbaarheid die aanvalles in staat stelt een systemen over te nemen / Wordpress plugin wpDiscuz has a critical vulnerability that allows an attacker to take over the system.
 redirect_from:
   - /DIVD-2020-00010/
-status : Open
+status : Closed
 ---
 
 | Our reference | [{{ page.divd }}]({{ page.divd }}) |
@@ -37,6 +37,8 @@ Wij hebben een groot aantal .nl domainnamen gecontroleerd om vast te stellen of 
 | 30-06-2020 | Scan van .nl domeinnamen |
 | 04-08-2020 | Manuele validatie van resultaten |
 | 07-08-2020 | Notificaties |
+| 3-12-2020 | Case Closed. |
+
 
 ## Meer informatie
 * [WordFence 28-7-2020](https://www.wordfence.com/blog/2020/07/critical-arbitrary-file-upload-vulnerability-patched-in-wpdiscuz-plugin/)
@@ -65,6 +67,8 @@ We have check a large number of .nl domain names to determine if wpDiscuz was in
 | 30-06-2020 | Scan of .nl domain names |
 | 04-08-2020 | Manual validation |
 | 07-08-2020 | Notifications |
+| 3-12-2020 | Case Closed. |
+
 
 ## More information
 * [WordFence 28-7-2020](https://www.wordfence.com/blog/2020/07/critical-arbitrary-file-upload-vulnerability-patched-in-wpdiscuz-plugin/)
