--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -24,7 +24,7 @@ status : Open
 
 Eind november hebben criminelen een phishing campagne uitgevoerd waarin ze gebruik gemaakt hebben van valse Zoom uitnodigingen en berichten over quarantaine van emails. [TheAnalyst](https://twitter.com/ffforward/) heeft over deze campagne getweet: [bericht 1](https://twitter.com/ffforward/status/1331960948245008388) en  [bericht 2](https://twitter.com/ffforward/status/1332073057058508800)
 
-Tijdens onderzoek naar deze campagne is een, aan Surf Cert gelieerde, onderzoeker er achter gekomen dat de server die gebruikt werd voor de phishing pagina via onvoldoende beveiligde directories lijsten met buitgemaakte email/wachtwoord combinaties lekte.
+Tijdens onderzoek naar deze campagne is een onderzoeker van een partner organisatie er achter gekomen dat de server die gebruikt werd voor de phishing pagina via onvoldoende beveiligde directories lijsten met buitgemaakte email/wachtwoord combinaties lekte.
 
 Het DIVD CSIRT heeft van de onderzoeker het Nederlandse deel van deze lijsten ontvangen met als doel de slachtoffers op de hoogte te brengen.
 
@@ -64,7 +64,7 @@ Wij hebben het Nederlandse deel van de lijst van de onderzoeker ontvangen. Wij g
 
 At the end of November, criminals were engaged in a phishing campaign mimicking Zoom message invites an held messages. This campaign was reported on Twitter by [TheAnalyst](https://twitter.com/ffforward/): [https://twitter.com/ffforward/status/1331960948245008388] and [https://twitter.com/ffforward/status/1332073057058508800]
 
-While researching this phishing campaign, a researcher related to Surf Cert, discovered that the phishing infrastructure leaked the captured usernames and passwords because it improperly secured certained directories.
+While researching this phishing campaign, a researcher from a partner organisation, discovered that the phishing infrastructure leaked the captured usernames and passwords because it improperly secured certained directories.
 
 The DIVD CSIRT has been given the Dutch part of the harvested credentials to inform potential victims.
 
