--- a/csirt.divd.nl/cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00014.md
@@ -14,6 +14,7 @@ status : Open
 | Our reference | [{{ page.divd }}]({{ page.divd }}) |
 | Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
 | Author | [{{ page.author }}](/handlers/{{ page.author }}) |
+| Researcher(s) | [Matthijs R. Koot](https://twitter.com/mrkoot) |
 | CVE(s) | CVE-2020-10148 |
 | Products | [SolarWinds Orion](https://www.solarwinds.com/solutions/orion) |
 | Versions | Lower than 2019 HF6 or 2020 HF2, see [SolarWinds Security Advisory](https://www.solarwinds.com/securityadvisory#anchor2) |
