Using tags for case ID

--- a/csirt.divd.nl/cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00003.md
@@ -10,7 +10,7 @@ redirect_from:
 status : Case Closed
 ---
 
-| Our reference | [{{ page.divd }}]({{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.author }}](/handlers/{{ page.author }})  |
 | CVE(s) | [CVE-2020-0609](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-CVE-2020-0609) [CVE-2020-0610](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-CVE-2020-0610) |
 | Products | Microsoft Windows Server 2012, 2012R2, 2016 and 2019 with Remote Desktop Gateway|
