--- a/csirt.divd.nl/cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00004.md
@@ -10,7 +10,7 @@ redirect_from:
 status : Closed
 ---
 
-| Our reference | [{{ page.divd }}]({{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.author }}](/handlers/{{ page.author }})  |
 | CVE(s) | N/A |
 | Products | N/A |
