--- a/csirt.divd.nl/cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00014.md
@@ -11,7 +11,7 @@ redirect_from:
 status : Open
 ---
 
-| Our reference | [{{ page.divd }}]({{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
 | Author | [{{ page.author }}](/handlers/{{ page.author }}) |
 | Researcher(s) | [Matthijs R. Koot](https://twitter.com/mrkoot) |
