--- a/csirt.divd.nl/cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00001.md
@@ -10,7 +10,7 @@ redirect_from:
 status: Case Closed
 ---
 
-| Our reference | [{{ page.divd }}](/{{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.author }}](/handlers/{{ page.author }})  |
 | CVE(s) | [CVE-2019-19781](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-19781) |
 | Products | Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP |
