--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -11,7 +11,7 @@ redirect_from:
 status : Closed
 ---
 
-| Our reference | [{{ page.divd }}]({{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
 | Author | [{{ page.author }}](/handlers/{{ page.author }}) |
 | Products | [wpDiscuz](https://nl.wordpress.org/plugins/wpdiscuz/) |
