--- a/csirt.divd.nl/cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00012.md
@@ -11,7 +11,7 @@ redirect_from:
 status : Open
 ---
 
-| Our reference | [{{ page.divd }}]({{ page.divd }}) |
+| Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
 | Author | [{{ page.author }}](/handlers/{{ page.author }}) |
 | CVE(s) | CVE-2018-13379 |
