--- a/csirt.divd.nl/cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00002.md
@@ -14,7 +14,7 @@ status : Case Closed
 
 | Our reference | {{ page.divd | divd }} |
 | Case lead | [{{ page.author }}](/handlers/{{ page.author }})  |
-| CVE(s) | Related to [CVE-2019-19781](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-19781) |
+| CVE(s) | Related to {% cve CVE-2019-19781 %} |
 | Products | TLS Wildcard certificates installed on vulnerable Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP servers |
 | Versions | N/A |
 | Patches | N/A |
