Shared team database between csirt and www Each team member has a page This page now shows the pasts on www.divd.nl and csirt.divd.nl Reasearchers are also credited

--- a/csirt.divd.nl/cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00002.md
@@ -4,26 +4,25 @@ title: DIVD-2020-00002 - Wildcard certificaten Citrix ADC
 divd: DIVD-2020-00002
 short: Wildcard Certificates Citrix ADC
 author: Frank Breedijk
-excerpt: Op ruim 450 kwetsbare Citrix ADC systemen hebben wij wildcard certificaten aangetroffen / We have found over 450 vulnerable Citrix ADC that used wildcard certificates
 redirect_from:
   - /DIVD-2020-00002/
 status : Case Closed
+excerpt: "
+	Op ruim 450 kwetsbare Citrix ADC systemen hebben wij wildcard certificaten aangetroffen / 
+	We have found over 450 vulnerable Citrix ADC that used wildcard certificates
+"
+reseachers:
+-
+cves:
+- 
+product:        TLS Wildcard certificates installed on vulnerable Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP servers
+versions:       n/a	
+-patch_status:	Available
+recommandation: Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised.
+-workaround:			
 ---
 
 ### Update 22-1-2020 21:20
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.author }}](/handlers/{{ page.author }})  |
-| CVE(s) | Related to {% cve CVE-2019-19781 %} |
-| Products | TLS Wildcard certificates installed on vulnerable Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP servers |
-| Versions | N/A |
-| Patches | N/A |
-| Workaround | N/A |
-| Recommendation | Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised. |
-| Status | {{ page.status }} |
-
-<small>[English below](#english)</small>
-
 
 ## Samenvatting
 
@@ -65,7 +64,7 @@ Wij zijn op dit moment bezig de lijst te verwerken en gaan daarna proberen alle 
 
 <hr>
 
-### <a name="english"></a>English
+### English
 <hr>
 
 ## Summary
