--- a/csirt.divd.nl/cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00006.md
@@ -5,22 +5,34 @@ divd: DIVD-2020-00006
 short: SMBv3 Server Compression Transform Header Memory Corruption
 author: Sander Spierenburg
 lead: Sander Spierenburg
-excerpt: Security Meldpunt vraagt uw aandacht voor een SMBv3 kwetsbaarheid en gaat netwerkbeheerders met publiek beschikbare SMBv3 servers met compressie waarschuwen / The Security hotline is asking your attention for a vulnerabilty in SMBv3 and is going to warn network operators of Dutch IPs that respond to SMBv3 handshakes and have encryption enabled
 redirect_from:
   - /DIVD-2020-00006/
 status : Closed
+excerpt: "
+	Security Meldpunt vraagt uw aandacht voor een SMBv3 kwetsbaarheid en gaat netwerkbeheerders met publiek beschikbare SMBv3 servers met compressie waarschuwen / 
+	The Security hotline is asking your attention for a vulnerabilty in SMBv3 and is going to warn network operators of Dutch IPs that respond to SMBv3 handshakes and have encryption enabled
+"
+-reseachers:
+-
+cves:
+- CVE-2020-0796
+product:        	Microsoft Server Message Block protocol
+versions:       	"
+	<ul>
+		<li>Windows 10 1903 for 32-bit Systems</li>
+		<li>Windows 10 1903 for x64-based Systems</li>
+		<li>Windows 10 1903 for ARM64-based Systems</li>
+		<li>Windows Server, version 1903 (Server Core)</li>
+		<li>Windows 10 1909 for 32-bit Systems</li>
+		<li>Windows 10 version 1909 for x64-based Systems</li>
+		<li>Windows 10 version 1909 for ARM64-based Systems</li>
+		<li>Windows Server, version 1909 (Server Core installation) </li>
+	</ul>
+"
+recommandation: 	Remove SMB services from the internet, block traffic from local network to the internet on port 445
+patch_status:	 	Available
+workaround:			"For servers: Block port 445 or disable compression. <br> For clients: None"
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| CVE(s) | CVE-2020-0796 |
-| Products | Microsoft Server Message Block protocol |
-| Versions | Windows 10 1903 for 32-bit Systems, Windows 10 1903 for x64-based Systems, Windows 10 1903 for ARM64-based Systems, Windows Server, version 1903 (Server Core), Windows 10 1909 for 32-bit Systems, Windows 10 version 1909 for x64-based Systems, Windows 10 version 1909 for ARM64-based Systems, Windows Server, version 1909 (Server Core installation)  |
-| Patches | Unavailable |
-| Workaround | For servers: Block port 445 or disable compression <br> For clients: None |
-| Recommendation | Remove SMB services from the internet, block traffic from local network to the internet on port 445 |
-| Status | {{ page.status }} |
 
 ## Update 12-3-2020
 
