--- a/csirt.divd.nl/cases/DIVD-2020-00008.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00008.md
@@ -5,20 +5,24 @@ divd: DIVD-2020-00008
 short: 313 000 .NL domains running Wordpress scanned.
 author: Lennaert Oudshoorn
 lead: Frank Breedijk
-excerpt: Onderzoekers van het DIVD hebben 313 000 Wordpress sites met .NL domein gescanned, meldingen voor kwetsbare sites worden gedaan naarmate de resultaten verwerkt worden. / DIVD researchers scanned 313 000 Wordpress websites with .NL domains, vulnerability notifications are being sent as results are processed.
 redirect_from:
   - /DIVD-2020-00008/
 status : Open
+excerpt: "
+	Onderzoekers van het DIVD hebben 313 000 Wordpress sites met .NL domein gescanned, meldingen voor kwetsbare sites worden gedaan naarmate de resultaten verwerkt worden. / 
+	DIVD researchers scanned 313 000 Wordpress websites with .NL domains, vulnerability notifications are being sent as results are processed.
+"
+reseachers:
+- Victor Gevers
+- Lennaert Oudshoorn
+cves:
+- Multiple
+product:        Wordpress
+versions:       Muliple versions
+recommandation: Keep Wordpress and all installed plugins up-to-date.
+-patch_status:	 	Available
+-workaround:		
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| CVE(s) | n/a |
-| Products | [Wordpress](https://wordpress.org) |
-| Versions | Multiple versions |
-| Recommendation | Keep Wordpress and all installed plugins up-to-date. |
-| Status | {{ page.status }} |
 
 ## Samenvatting
 Via [infooNL](https://www.infoo.nl) hebben wij een lijst ontvangen van ~313.000 .NL domeinnamen waar Wordpress op lijkt te staan. Onderzoekers van het DIVD zijn met deze dataset aan de slag gegaan en hebben al deze domeinen gescanned op onder andere het versienummer van Wordpress en welke plugins er aanwezig zijn. Aan de hand van deze scan resultaten zullen wij beginnen gevonden kwetsbaarheden bij de websites te melden.
