--- a/csirt.divd.nl/cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00009.md
@@ -5,19 +5,23 @@ divd: DIVD-2020-00009
 short: Data dumped from compromised Pulse Secure VPN enterprise servers.
 author: Lennaert Oudshoorn
 lead: Frank Breedijk
-excerpt: Een datadump met informatie over meer dan 900 gecompromitteerde Pulse Secure VPN enterprise servers is publiek gemaakt. / A data dump with information of over 900 compromised Pulse Secure VPN enterprise servers has been released.
 redirect_from:
   - /DIVD-2020-00009/
 status : Closed
+excerpt: "
+	Een datadump met informatie over meer dan 900 gecompromitteerde Pulse Secure VPN enterprise servers is publiek gemaakt. / 
+	A data dump with information of over 900 compromised Pulse Secure VPN enterprise servers has been released.
+"
+reseachers:
+-
+cves:
+- n/a
+product:        Pulse VPN
+versions:       n/a
+recommandation: If your organisation was affected by this data breach we recommend to make a forensic copy of the system to investigate the compromise and replace the live system with a newly built setup.
+-patch_status:	 	Available
+-workaround:		
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| Products | Pulse VPN |
-| Versions | n/a |
-| Recommendation | If your organisation was affected by this data breach we recommend to make a forensic copy of the system to investigate the compromise and replace the live system with a newly built setup. |
-| Status | {{ page.status }} |
 
 ## Samenvatting
 4 augustus 2020 is een lijst van gebruikersnamen en IP adressen gelekt van meer dan 900 Pulse Secure VPN enterprise servers. De volgende data verschijnt in de gelekte dataset:
