--- a/csirt.divd.nl/cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00012.md
@@ -5,20 +5,23 @@ divd: DIVD-2020-00012
 short: A list of 49 577 vulnerable Fortinet devices leaked online
 author: Lennaert Oudshoorn
 lead: Frank Breedijk
-excerpt: Er is een lijst online aangetroffen met 49 577 kwetsbare Fortinet VPN devices waarvan login credentials gestolen kunnen worden / A list was found online, with 49 577 vulnerable Fortinet VPN devices, potentially login credentials could be exposed
 redirect_from:
   - /DIVD-2020-00012/
 status : Open
+excerpt: "
+	Er is een lijst online aangetroffen met 49 577 kwetsbare Fortinet VPN devices waarvan login credentials gestolen kunnen worden / 
+	A list was found online, with 49 577 vulnerable Fortinet VPN devices, potentially login credentials could be exposed
+"
+reseachers:
+- 
+cves:
+- CVE-2018-13379
+product: Fortinet FortiOS SSL VPN
+versions: Multiple versions, see [FortiGuard PSIRT Advisory
+recommandation: Upgrade to the latest version and reset VPN users passwords.
+patch_status:	 	Available
+-workaround:		
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| CVE(s) | CVE-2018-13379 |
-| Products | [Fortinet FortiOS SSL VPN](https://www.fortinet.com/products/fortigate/fortios) |
-| Versions | Multiple versions, see [FortiGuard PSIRT Advisory](http://www.fortiguard.com/psirt/FG-IR-18-384) |
-| Recommendation | Upgrade to the latest version and reset VPN users passwords. |
-| Status | {{ page.status }} |
 
 ## Samenvatting
 Op 19 November is door een threat intelligence analyst een lijst met 49,577 kwetsbare Fortinet VPN devices aangetroffen. Het gaat hier om Fortinet devices die kwetsbaar zijn voor CVE-2018-13379, via deze kwetsbaarheid kan een aanvaller via een aangepast HTTP request systeem bestanden opvragen waartoe hij normaal gesproken geen toegang zou moeten hebben. Door het bestand sslvpn_websession op te vragen, is het mogelijk om de inlogggegeven van gebruikers te stelen.
