--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -5,20 +5,32 @@ divd: DIVD-2020-00013
 short: A list of credentials that phishers gained from victims has leaked and has been recoved.
 author: Frank Breedijk
 lead: Frank Breedijk
-excerpt: DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen / DIVD has received a list of credentials obtained through phishing from a partner.
 redirect_from:
   - /DIVD-2020-00013/
 status : Open
+excerpt: "
+	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen / 
+	DIVD has received a list of credentials obtained through phishing from a partner.
+"
+redirect_from:
+  - /DIVD-2020-00014/
+status : Open
+reseachers:
+-
+cves:
+- n/a
+product: "
+	n/a
+"
+versions: "
+	n/a
+"
+recommandation: "
+	If you have been notified that your email/password is on the list, change and stop using this particular password.
+"
+-patch_status:	 	Available
+-workaround:		
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| CVE(s) | n/a |
-| Products | n/a |
-| Versions | n/a |
-| Recommendation | If you have been notified that your email/password is on the list, change and stop using this particular password. |
-| Status | {{ page.status }} |
 
 ## Samenvatting
 
