--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -5,22 +5,23 @@ divd: DIVD-2020-00005
 short: Apache Tomcat AJP File Read/Inclusion Vulnerability
 author: Jeroen van de Weerd
 lead: Frank Breedijk
-excerpt: 773 Nederlandse IP adressen kwetsbaar voor Ghostcat - Apache Tomcat AJP File Read/Inclusion Vulnerability   / 773 Dutch IP addresses vulnerable to Ghostcat - Apache Tomcat AJP File Read / Inclusion Vulnerability 
 redirect_from:
   - /DIVD-2020-00005/
 status : Open
+excerpt: "
+	773 Nederlandse IP adressen kwetsbaar voor Ghostcat - Apache Tomcat AJP File Read/Inclusion Vulnerability / 
+	773 Dutch IP addresses vulnerable to Ghostcat - Apache Tomcat AJP File Read / Inclusion Vulnerability 
+"
+reseachers:
+-
+cves:
+- CVE-2020-1938
+product:        	Apache Tomcat AJP
+versions:       	9, 8, 7, and 6
+recommandation: 	Disable AJP if not used, make sure to install the update
+patch_status:	 	Available
+workaround:			Comment out the line, "Connector port="8009" protocol="AJP/1.3" redirectPort=8443"
 ---
-
-| Our reference | {{ page.divd | divd }} |
-| Case lead | [{{ page.lead }}](/handlers/{{ page.lead }}) |
-| Author | [{{ page.author }}](/handlers/{{ page.author }}) |
-| CVE(s) | CVE-2020-1938 |
-| Products | Apache Tomcat AJP |
-| Versions | 9, 8, 7, 6 |
-| Patches | Available |
-| Workaround | Comment out the line, "Connector port="8009" protocol="AJP/1.3" redirectPort=8443" |
-| Recommendation | Disable AJP if not used, make sure to install the update |
-| Status | {{ page.status }} |
 
 ## Samenvatting
 
