--- a/csirt.divd.nl/cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00001.md
@@ -18,7 +18,7 @@ cves:
 product:        Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP
 versions:       ADC versions 10, 11.1, 12.0, 12.1 and 13 <br> SD-WAN WANOP versions 10.2.6 and 11.0.3
 patch_status:	Available
-recommandation: Don't use unpatched systems. Make sure systems are not compromised/backdoored before patching	
+recommendation: Don't use unpatched systems. Make sure systems are not compromised/backdoored before patching	
 workaround:		Available but not 100% effective		
 ---
 
