--- a/csirt.divd.nl/cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00002.md
@@ -18,7 +18,7 @@ cves:
 product:        TLS Wildcard certificates installed on vulnerable Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP servers
 versions:       n/a	
 -patch_status:	Available
-recommandation: Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised.
+recommendation: Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised.
 -workaround:			
 ---
 
