--- a/csirt.divd.nl/cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00003.md
@@ -19,7 +19,7 @@ cves:
 product:        Microsoft Windows Server 2012, 2012R2, 2016 and 2019 with Remote Desktop Gateway
 versions:       Microsoft Windows Server 2012, 2012R2, 2016 and 2019
 patch_status:	Available
-recommandation: Apply patches of Patch Tuesday January 2020
+recommendation: Apply patches of Patch Tuesday January 2020
 workaround:		Superceeded by patches
 ---
 
