--- a/csirt.divd.nl/cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00004.md
@@ -18,7 +18,7 @@ cves:
 product:        n/a
 versions:       n/a
 -patch_status:	n/a
-recommandation: Make sure these systems are not accessible from the internet.	
+recommendation: Make sure these systems are not accessible from the internet.	
 -workaround:			
 ---
 
