--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -18,7 +18,7 @@ cves:
 - CVE-2020-1938
 product:        	Apache Tomcat AJP
 versions:       	9, 8, 7, and 6
-recommandation: 	Disable AJP if not used, make sure to install the update
+recommendation: 	Disable AJP if not used, make sure to install the update
 patch_status:	 	Available
 workaround:			Comment out the line, "Connector port="8009" protocol="AJP/1.3" redirectPort=8443"
 ---
