--- a/csirt.divd.nl/cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00006.md
@@ -29,7 +29,7 @@ versions:       	"
 		<li>Windows Server, version 1909 (Server Core installation) </li>
 	</ul>
 "
-recommandation: 	Remove SMB services from the internet, block traffic from local network to the internet on port 445
+recommendation: 	Remove SMB services from the internet, block traffic from local network to the internet on port 445
 patch_status:	 	Available
 workaround:			"For servers: Block port 445 or disable compression. <br> For clients: None"
 ---
