--- a/csirt.divd.nl/cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00007.md
@@ -20,7 +20,7 @@ cves:
 - CVE-2020-8983
 product:        Citrix ShareFile
 versions:       ShareFile storage zones Controller 5.9.0, ShareFile storage zones Controller 5.8.0, ShareFile storage zones Controller 5.7.0, ShareFile StorageZones Controller 5.6.0, ShareFile StorageZones Controller 5.5.0, All earlier versions of ShareFile StorageZones Controller
-recommandation: Run the mitigation tool as soon as possible on the storage zone controllers managing each impacted storage zone by following the guidance in the support article.
+recommendation: Run the mitigation tool as soon as possible on the storage zone controllers managing each impacted storage zone by following the guidance in the support article.
 patch_status:	 	Available
 -workaround:		
 ---
