--- a/csirt.divd.nl/cases/DIVD-2020-00008.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00008.md
@@ -19,7 +19,7 @@ cves:
 - Multiple
 product:        Wordpress
 versions:       Muliple versions
-recommandation: Keep Wordpress and all installed plugins up-to-date.
+recommendation: Keep Wordpress and all installed plugins up-to-date.
 -patch_status:	 	Available
 -workaround:		
 ---
