--- a/csirt.divd.nl/cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00009.md
@@ -18,7 +18,7 @@ cves:
 - n/a
 product:        Pulse VPN
 versions:       n/a
-recommandation: If your organisation was affected by this data breach we recommend to make a forensic copy of the system to investigate the compromise and replace the live system with a newly built setup.
+recommendation: If your organisation was affected by this data breach we recommend to make a forensic copy of the system to investigate the compromise and replace the live system with a newly built setup.
 -patch_status:	 	Available
 -workaround:		
 ---
