--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -18,7 +18,7 @@ cves:
 - CVE-2020-24186
 product: 		wpDiscuz WordPress plugin
 versions: 		Any version below 7.0.5 of 23 July 2020
-recommandation: Upgrade to the latest wpDiscuz version and check system for compromise
+recommendation: Upgrade to the latest wpDiscuz version and check system for compromise
 patch_status:	 	Available
 -workaround:		
 ---
