--- a/csirt.divd.nl/cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00012.md
@@ -18,7 +18,7 @@ cves:
 - CVE-2018-13379
 product: Fortinet FortiOS SSL VPN
 versions: Multiple versions, see [FortiGuard PSIRT Advisory
-recommandation: Upgrade to the latest version and reset VPN users passwords.
+recommendation: Upgrade to the latest version and reset VPN users passwords.
 patch_status:	 	Available
 -workaround:		
 ---
