--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -25,7 +25,7 @@ product: "
 versions: "
 	n/a
 "
-recommandation: "
+recommendation: "
 	If you have been notified that your email/password is on the list, change and stop using this particular password.
 "
 -patch_status:	 	Available
