--- a/csirt.divd.nl/cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00014.md
@@ -6,8 +6,8 @@ short: SolarWinds Orion API authentication bypass
 author: Lennaert Oudshoorn
 lead: Barry van Kampen
 excerpt: "
-	Een authenticatie bypass kan aanvallers de mogelijkeheid geven om API commando's uit te voeren, hierdoor kan het systeem gecompromiteerd worden. 
-	/ 
+	Een authenticatie bypass kan aanvallers de mogelijkeheid geven om API commando's uit te voeren, hierdoor kan het systeem gecompromiteerd worden.
+	/
 	An authentication bypass could allow attackers to execute API commands which may result in a compromise of the system.
 "
 redirect_from:
@@ -26,7 +26,7 @@ versions: "
 	Lower than 2019 HF6 or 2020 HF2
 "
 patch_status:	 	Available
-recommandation: "
+recommendation: "
 	Deploy the hotfix that is available for your Orion-version
 "
 -workaround:		
