--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -6,9 +6,9 @@ short: On-prem Exchange Servers targeted with 0-day exploits
 author: Lennaert Oudshoorn
 lead: Frank Breedijk
 excerpt: "
-	Een authenticatie bypass kan aanvallers de mogelijkeheid geven om API commando's uit te voeren, hierdoor kan het systeem gecompromiteerd worden.
+	Microsoft heeft meerdere 0-day exploits ontdekt die actief gebruikt worden om on-premises versies van Microsoft Exchange Server aan te vallen.
 	/
-	An authentication bypass could allow attackers to execute API commands which may result in a compromise of the system.
+	Microsoft has detected multiple 0-day exploits that are actively being used in attacks against on-premises versions of Microsoft Exchange Server.
 "
 redirect_from:
   - /DIVD-2021-00001/
