--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -52,16 +52,15 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 
 | Date  | Description |
 |:-----:|-------------|
-| 09-03-2021 | Herscan van "Nederlandse" servers
-| 07-03-2021 | 42k+ messsages verstuurd via email |
 | 06-01-2021 | Volexity detecteerd abnormale activiteit op twee van haar klanten hun Microsoft Exchange Servers |
-| 04-03-2021 | "Nederland" lijst naar NBIP gestuurd voor verder notificaties |
-| 04-03-2021 | Scan rest van IPv4 space klaar |
-| 03-03-2021 | Start scannen rest van IPv4 space |
-| 03-03-2021 | Onderzoekers van DIVD scannen "Nederlandse" exchange servers met deze kwetsbaarheden |
 | 02-03-2021 | Microsoft publiceert security blog and patches |
 | 02-03-2021 | Volexity publiceert Blog |
-| 03-03-2021 | DIVD scant op deze kwetsbaarheid |
+| 03-03-2021 | Onderzoekers van DIVD scannen "Nederlandse" exchange servers met deze kwetsbaarheden |
+| 03-03-2021 | Start scannen rest van IPv4 space |
+| 04-03-2021 | "Nederland" lijst naar NBIP gestuurd voor verder notificaties |
+| 04-03-2021 | Scan rest van IPv4 space klaar |
+| 07-03-2021 | 42k+ messsages verstuurd via email |
+| 09-03-2021 | Herscan van "Nederlandse" servers
 
 ## Meer informatie
 * [Microsoft Security Blog](https://www.microsoft.com/security/blog/2021/03/02/hafnium-targeting-exchange-servers/)
@@ -91,16 +90,15 @@ Based on these scan results we try to notify administrators of vulnerable system
 
 | Date  | Description |
 |:-----:|-------------|
-| 09-03-2021 | Rescan of "Dutch" server"
-| 07-03-2021 | 42k+ messsages sent via email |
 | 06-01-2021 | Volexity detected anomalous activity on two of its customers' Microsoft Exchange Servers |
-| 04-03-2021 | "Dutch" list sent to NBIP for further notification |
-| 04-03-2021 | Scan remaining IPv4 space, done |
-| 03-03-2021 | Start scan remaining IPv4 space |
-| 03-03-2021 | Researchers or DIVD scan "Dutch" Exchange server for these vulnerabilities |
 | 02-03-2021 | Microsoft releases security blog and patches |
 | 02-03-2021 | Volexity publishes Blog |
-| 03-03-2021 | DIVD starts scanning for this vulnerability |
+| 03-03-2021 | Researchers or DIVD scan "Dutch" Exchange server for these vulnerabilities |
+| 03-03-2021 | Start scan remaining IPv4 space |
+| 04-03-2021 | "Dutch" list sent to NBIP for further notification |
+| 04-03-2021 | Scan remaining IPv4 space, done |
+| 07-03-2021 | 42k+ messsages sent via email |
+| 09-03-2021 | Rescan of "Dutch" server" |
 
 
 ## More information
