--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -60,7 +60,7 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 | 04-03-2021 | "Nederland" lijst naar NBIP gestuurd voor verder notificaties |
 | 04-03-2021 | Scan rest van IPv4 space klaar |
 | 07-03-2021 | 42k+ messsages verstuurd via email |
-| 09-03-2021 | Herscan van "Nederlandse" servers
+| 09-03-2021 | Herscan van all servers die voorheen ook gescand zijn |
 
 ## Meer informatie
 * [Microsoft Security Blog](https://www.microsoft.com/security/blog/2021/03/02/hafnium-targeting-exchange-servers/)
@@ -98,7 +98,7 @@ Based on these scan results we try to notify administrators of vulnerable system
 | 04-03-2021 | "Dutch" list sent to NBIP for further notification |
 | 04-03-2021 | Scan remaining IPv4 space, done |
 | 07-03-2021 | 42k+ messsages sent via email |
-| 09-03-2021 | Rescan of "Dutch" server" |
+| 09-03-2021 | Rescan of all previously scanned servers |
 
 
 ## More information
