--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -60,7 +60,8 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 | 04-03-2021 | "Nederland" lijst naar NBIP gestuurd voor verder notificaties |
 | 04-03-2021 | Scan rest van IPv4 space klaar |
 | 07-03-2021 | 42k+ messsages verstuurd via email |
-| 09-03-2021 | Herscan van all servers die voorheen ook gescand zijn |
+| 09-03-2021 | Herscan en notificatie van all servers die voorheen ook gescand zijn |
+| 16-03-2021 | Herscan en notificatie van alle servers inclusief script die daadwerkelijk {% cve CVE-2021-26855 %} test |
 
 ## Meer informatie
 * [Microsoft Security Blog](https://www.microsoft.com/security/blog/2021/03/02/hafnium-targeting-exchange-servers/)
@@ -68,7 +69,10 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 * [Volexity Blog](https://www.volexity.com/blog/2021/03/02/active-exploitation-of-microsoft-exchange-zero-day-vulnerabilities/)
 * [NMAP Script van Kevin Beaumont](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange.nse)
 * [HuntressLabs observaties & IoC's](https://www.reddit.com/r/msp/comments/lwmo5c/mass_exploitation_of_onprem_exchange_servers/).
+* [Onze test scripts](https://github.com/DIVD-NL/Exchange_DIVD-2021-00001)
 
+<hr>
+![Graph of notification sent](/assets/images/DIVD-2021-00001-stats.png "Notifications sent over time")
 <hr>
 
 ### English
@@ -98,7 +102,8 @@ Based on these scan results we try to notify administrators of vulnerable system
 | 04-03-2021 | "Dutch" list sent to NBIP for further notification |
 | 04-03-2021 | Scan remaining IPv4 space, done |
 | 07-03-2021 | 42k+ messsages sent via email |
-| 09-03-2021 | Rescan of all previously scanned servers |
+| 09-03-2021 | Rescan and notifications of all previously scanned servers |
+| 16-03-2021 | Rescan and notifications of all previously scanned servers, including a script that actually tests for {% cve CVE-2021-26855 %} |
 
 
 ## More information
@@ -107,3 +112,4 @@ Based on these scan results we try to notify administrators of vulnerable system
 * [Volexity Blog](https://www.volexity.com/blog/2021/03/02/active-exploitation-of-microsoft-exchange-zero-day-vulnerabilities/)
 * [NMAP Script from Kevin Beaumont](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange.nse)
 * [HuntressLabs observations & IoC's](https://www.reddit.com/r/msp/comments/lwmo5c/mass_exploitation_of_onprem_exchange_servers/).
+* [Our test scripts](https://github.com/DIVD-NL/Exchange_DIVD-2021-00001)
