removed potential errors and fixed typos
removed potential errors with a double redirect and a double status, as well as some typos.

--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -12,9 +12,6 @@ excerpt: "
 	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen / 
 	DIVD has received a list of credentials obtained through phishing from a partner.
 "
-redirect_from:
-  - /DIVD-2020-00014/
-status : Open
 reseachers:
 -
 cves:
@@ -42,7 +39,7 @@ Het DIVD CSIRT heeft van de onderzoeker het Nederlandse deel van deze lijsten on
 
 ## Wat kunt u doen?
 
-Als je deze pagina bezoek omdat je een email heeft ontvangen van csirt@divdi.nl met je wachtwoord en een deel van een wachtwoord erin, dan betekent dit dat je ervanuit moet gaan dat deze informatie in handen is van criminelen.
+Als je deze pagina bezoekt omdat je een email heeft ontvangen van csirt@divd.nl met je emailadres en een deel van een wachtwoord erin, dan betekent dit dat je ervanuit moet gaan dat deze informatie in handen is van criminelen.
 
 * Ga na of je deze combinatie van email adres en wachtwoord ergens gebruikt.
 * Als je deze combinatie ergens gebruikt, wijzig het wachtwoord dan onmiddellijk.
