--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -2,7 +2,7 @@
 layout: case
 title: DIVD-2021-00004 - Gelekte phishing gegevens / Leaked phishing credentials
 divd: DIVD-2021-00004
-short: A list of credentials that phishers gained from victims has leaked and has been recoved.
+short: A list of credentials that phishers gained from victims has leaked and has been recovered.
 author: Lennaert Oudshoorn / Célistine Oosting
 lead: Lennaert Oudshoorn
 redirect_from:
@@ -12,7 +12,7 @@ excerpt: "
 	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte emailadressen en wachtwoorden van een security researcher ontvangen /
 	DIVD has received a list of credentials obtained through phishing from a security researcher.
 "
-reseachers:
+researchers:
 - Victor Gevers
 - Célistine Oosting
 - Frank Voelkel
@@ -59,7 +59,7 @@ Wij gaan, in de komende dagen,  aan ieder van de email adressen op de lijst een 
 
 | datum | Omschrijving |
 |:-----:|-------------|
-| 22-03-2021 | Phising campagne is actief |
+| 22-03-2021 | Phishing campagne is actief |
 | 09-04-2021 | Onderzoeker doet melding en levert gegevens aan bij DIVD |
 | 07-05-2021 | DIVD start case en verwerkt de gegevens |
 | 09-05-2021 | Eerste emails verstuurd |
@@ -94,7 +94,7 @@ We have received the list of email addresses and passwords. Each email address o
 
 | Date  | Description |
 |:-----:|-------------|
-| 22-03-2021 | Phising campagne is active |
+| 22-03-2021 | Phishing campagne is active |
 | 09-04-2021 | Researcher reports the campaign and data to DIVD |
 | 07-05-2021 | DIVD starts a case and processes the data |
 | 09-05-2021 | First notifications sent |
