--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -9,7 +9,7 @@ redirect_from:
   - /DIVD-2021-00004/
 status : Open
 excerpt: "
-	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte emailadressen en wachtwoorden van een security researcher ontvangen /
+	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte emailadressen en wachtwoorden van een security researcher ontvangen. /
 	DIVD has received a list of credentials obtained through phishing from a security researcher.
 "
 researchers:
@@ -94,7 +94,7 @@ We have received the list of email addresses and passwords. Each email address o
 
 | Date  | Description |
 |:-----:|-------------|
-| 22-03-2021 | Phishing campagne is active |
+| 22-03-2021 | Phishing campaign is active |
 | 09-04-2021 | Researcher reports the campaign and data to DIVD |
 | 07-05-2021 | DIVD starts a case and processes the data |
 | 09-05-2021 | First notifications sent |
