--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -35,14 +35,14 @@ If you have been notified that your email address(es) and password(s) are on the
 
 ## Samenvatting
 
-In april melde de security researcher Marko Simunovic aan het DIVD dat er een phishing campagne gaande was, die verschillende personen en organisaties trof die gebruik maakten van Active Directory Federation Services (ADFS). De onderzoeker meldde ook dat door zwakke beveiliging in kritieke directories, de servers van de criminelen de gegevens uitlekten.
+In april melde de security researcher Marko Simunovic aan het DIVD dat er een phishing campagne gaande was, die verschillende personen en organisaties trof die gebruik maakten van Active Directory Federation Services (ADFS). De onderzoeker meldde ook dat door zwakke beveiliging in kritieke directories, de servers van de criminelen de buitegemaakte gegevens uitlekten.
 
 Het DIVD CSIRT heeft van de onderzoeker de gegevens ontvangen met als doel in de komende dagen de slachtoffers te notificeren via email.
 
 
 ## Wat kunt u doen?
 
-Als je deze pagina bezoekt omdat je een email heeft ontvangen van csirt@divd.nl met je emailadres en een of meerdere wachtwoord(en) erin, dan betekent dit dat je ervanuit moet gaan dat deze informatie in handen is van criminelen.
+Als je deze pagina bezoekt omdat je een email heeft ontvangen van divd-2021-00004@divd.nl met je emailadres en een of meerdere wachtwoord(en) erin, dan betekent dit dat je ervanuit moet gaan dat deze informatie in handen is van criminelen.
 
 * Ga na of je deze combinatie van email adres en wachtwoord ergens gebruikt.
 * Als je deze combinatie ergens gebruikt, wijzig het wachtwoord dan onmiddellijk.
@@ -78,7 +78,7 @@ The DIVD CSIRT has been given the information by the researcher with the purpose
 
 ## What you can do
 
-If you are visiting this page because you have received an email from csirt@divd.nl with your email address and one or multiple password(s) in it, it means that this email/password combination has been obtained by criminals.
+If you are visiting this page because you have received an email from divd-2021-00004@divd.nl with your email address and one or multiple password(s) in it, it means that this email/password combination has been obtained by criminals.
 
 * Verify if you are using this email/password combination anywhere.
 * If you are, change the password immediately.
